# executorch

./: .gitignore  clean_and_update.sh
backends/arm/scripts/: build_executorch_runner.sh
examples/arm/: README.md  TODO.md  aot_arm_compiler.py  run.sh  setup.sh
examples/arm/ethos-u-setup/: arm-none-eabi-gcc.cmake
examples/arm/executor_runner/: CMakeLists.txt  arm.code-workspace  arm_executor_runner.cpp  ethos-u.cmake  pte_to_header.py  stm32h5.cmake  test.sh
examples/arm/executor_runner/ethos-u/: CMakeLists.txt  arm_executor_runner.cpp
examples/arm/executor_runner/stm32h5/: CMakeLists.txt  STM32H563xx_FLASH.ld
examples/arm/executor_runner/stm32h5/Inc/: main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  stm32h5xx_nucleo_conf.h
examples/arm/executor_runner/stm32h5/Src/: arm_executor_runner.cpp  main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
examples/arm/executor_runner/stm32h5/cmake/stm32cubemx/: CMakeLists.txt
examples/models/: __init__.py
examples/models/simple_transformer/: __init__.py  fp32_normalD_input_tensor.pt  model.py  simple_encoder.pth
examples/models/test/: test_export.py
